styling fixes for podcast dark mode

--- a/app/assets/stylesheets/app/metrics-card.scss
+++ b/app/assets/stylesheets/app/metrics-card.scss
@@ -59,27 +59,21 @@
 @include color-mode(dark) {
   .metrics-bar-list {
     .list-group-item {
-      background: #0000;
+      background: #000;
+    }
+  }
+
+  .metrics-bar-list,
+  .episode-card-info  {
+    .apex-color-mode {
+      opacity: 0.4;
     }
   }
 
   .metrics-episodes-card {
-    .episode-row {
-      p,
-      h2 {
-        background: linear-gradient(
-          90deg,
-          rgba(0, 0, 0, 1) 0%,
-          rgba(0, 0, 0, 1) 15%,
-          rgba(0, 0, 0, 1) 85%,
-          rgba(0, 0, 0, 1) 100%
-        );
-      }
-
-      .text-secondary {
-        span {
-          color: #f5f5f5;
-        }
+    .text-secondary {
+      span {
+        color: #f5f5f5;
       }
     }
   }
